--- a/proj1/index.html
+++ b/proj1/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WEBGL Project 1</title>
-	<script src="main.js"/>
+	<title>proj-webgl_1</title>
+	<style type="text/css">
+		html, body {
+			margin: 0px;
+		}
+		canvas {
+			width: 100vw;
+			height: 99.3vh;
+		}
+	</style>
 </head>
 <body>
-stuff! :D
+	<canvas id="glCanvas" width="1280" height="680"></canvas>
+	<script src="../gl-matrix.js"></script>
+	<script src="main.js"></script>
 </body>
 </html>
