--- a/proj1/index.html
+++ b/proj1/index.html
@@ -10,11 +10,52 @@
 			width: 100vw;
 			height: 99.3vh;
 		}
+		#slideContainer {
+			width: 100%;
+			position: fixed;
+			top: 10px;
+			left: 0px;
+		}
+		.zTranslationTitle {
+			width: 100%;
+			font-family: 'Consolas';
+			color: #fff;
+			text-align: center;
+		}
+		.slider {
+			-webkit-appearance: none;
+			width: 100%;
+			height: 15px;
+		    border-radius: 5px;
+		    background: #d3d3d3;
+		    outline: none;
+		    opacity: 0.7;
+		    -webkit-transition: .2s;
+		    transition: opacity .2s;
+		}
+		.slider:hover {
+		    opacity: 1;
+		}
+
+		.slider::-webkit-slider-thumb {
+		    -webkit-appearance: none;
+		    appearance: none;
+		    width: 25px;
+		    height: 25px;
+		    border-radius: 50%;
+		    background: #FFF;
+		    cursor: pointer;
+		}
 	</style>
 </head>
 <body>
+	<div id="slideContainer">
+		<div class="zTranslationTitle" id="zTranslationTitle">ZTranslate : -6.0</div>
+		<input type="range" min="-100" max="10" value="-6.0" class="slider" id="zTranslationSliderRange">
+	</div>
 	<canvas id="glCanvas" width="1280" height="680"></canvas>
 	<script src="../gl-matrix.js"></script>
 	<script src="main.js"></script>
+	<script src="slider.js"></script>
 </body>
 </html>
