--- a/index.html
+++ b/index.html
@@ -2,8 +2,26 @@
 <html>
 <head>
 	<title>Home</title>
+	<style type="text/css">
+		.tag {
+			background-color: #003399;
+			color: #fff;
+			font-family: 'Consolas';
+			padding:4px;
+			margin: 4px;
+			border-radius: 4px;
+		}
+
+		li {
+			margin-bottom: 16px;
+		}
+	</style>
 </head>
 <body>
-	<a href="proj1/index.html">go here plis</a>
+	<h1><code>WebGL</code> Projects</h1>
+	<ul>
+		<li><a href="proj1/index.html">Project 1</a>: Any 3 to 5 sided figure (<span class="tag">x-translation</span><span class="tag">y-translation</span><span class="tag">z-translation</span>)</li>
+		<li><a href="proj2/index.html">Project 2</a>: Coloured 2D Structure (<span class="tag">x-translation</span><span class="tag">y-translation</span><span class="tag">z-translation</span>)</li>
+	</ul>
 </body>
 </html>
