--- a/proj1/index.html
+++ b/proj1/index.html
@@ -8,7 +8,8 @@
 		}
 		canvas {
 			width: 100vw;
-			height: 99.3vh;
+			height: 100vh;
+			display: block;
 		}
 		#slideContainer {
 			width: 100%;
