Corrected vertex naming errors

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<h1><code>WebGL</code> Projects</h1>
 	<ul>
 		<li><a href="proj1/index.html">Project 1</a>: Any 3 to 5 sided figure (<span class="tag">x-translation</span><span class="tag">y-translation</span><span class="tag">z-translation</span>)</li>
-		<li><a href="proj2/index.html">Project 2</a>: Coloured 2D Structure (<span class="tag">x-translation</span><span class="tag">y-translation</span><span class="tag">z-translation</span>)</li>
+		<li><a href="proj2/index.html">Project 2</a>: Coloured 2D Structure (<span class="tag">color-r</span><span class="tag">color-g</span><span class="tag">color-b</span><span class="tag">color-a</span>)</li>
 	</ul>
 </body>
 </html>
