--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<ul>
 		<li><a href="proj1/index.html">Project 1</a>: Any 3 to 5 sided figure (<span class="tag">x-translation</span><span class="tag">y-translation</span><span class="tag">z-translation</span>)</li>
 		<li><a href="proj2/index.html">Project 2</a>: Coloured 2D Structure (<span class="tag">color-r</span><span class="tag">color-g</span><span class="tag">color-b</span><span class="tag">color-a</span>)</li>
+		<li><a href="proj3/index.html">Project 3</a>: 3D Rotating Cube (<span class="tag">3d-rotation</span>)</li>
 	</ul>
 </body>
 </html>
