--- a/proj2/index.html
+++ b/proj2/index.html
@@ -95,5 +95,47 @@
 	<script src="../gl-matrix.js"></script>
 	<script src="main.js"></script>
 	<script src="colorify.js"></script>
+	<script type="text/javascript">
+
+		var bufferColors = [
+			1.0,  1.0,  1.0,  1.0,    // white
+		    1.0,  0.0,  0.0,  1.0,    // red
+		    0.0,  1.0,  0.0,  1.0,    // green
+		    0.0,  0.0,  1.0,  1.0,    // blue
+		];
+
+		
+		console.log("Loading colours.");
+		// load colours from the URL
+		var urlHash = window.location.hash;
+
+		if (urlHash == "") {
+			window.location.hash="#color1=:255:255:255:255&color2=:255:0:0:255&color3=:0:255:0:255&color4=:0:0:255:255";
+			location.reload();
+		}
+
+		urlHash = urlHash.substring(1, urlHash.length); // take out preceeding #
+
+		var urlColours = urlHash.split("&");
+		var counter = 0;
+		for (i = 0; i < urlColours.length; i++) {
+			var colourValues = urlColours[i].split(":");
+			for (j = 1; j < colourValues.length; j++) {
+				var val = parseInt(colourValues[j]);
+				console.log(val/255);
+				bufferColors[counter] = val/255;
+				var counterHex = counter.toString(16);
+				var input = document.getElementById("input_vertexVal_" + counterHex.toUpperCase());
+				input.value = val;
+				counter++;
+
+			}  
+		}
+		console.log(bufferColors);	
+	
+
+		main();
+	
+	</script>
 </body>
 </html>
