--- a/Snek/index.html
+++ b/Snek/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>Snek</title>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="/main.css">
 	<style type="text/css">
 		@font-face {
 			font-family: 'BITWONDER';
-			src: url('8-BIT WONDER.ttf');
+			src: url("/8-BIT WONDER.ttf");
 		}
 	</style>
 </head>
