--- a/Snek/index.html
+++ b/Snek/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Snek</title>
-	<link rel="stylesheet" type="text/css" href="/main.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<style type="text/css">
 		@font-face {
 			font-family: 'BITWONDER';
