--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 	<title>Home</title>
 	<style type="text/css">
+		*, html {
+			box-sizing: border-box;
+			margin: 0px;
+			padding: 0px;
+			background-color: #000;
+		}
 		.tag {
 			background-color: #003399;
 			color: #fff;
