--- a/proj4/index.html
+++ b/proj4/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>proj-webgl_4</title>
+	<title>Snek</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<style type="text/css">
-		html, body {
-			margin: 0px;
-		}
-		canvas  {
-			width: 100vw;
-			height: 100vh;
-			display: block;
+		@font-face {
+			font-family: 'BITWONDER';
+			src: url("/8-BIT WONDER.ttf");
 		}
 	</style>
 </head>
-<body>
-	<script src="../three.js"></script>
-	<script src="main.js"></script>
+<body onkeydown="handleInput(event)">
+	<div style="font-family: 'BITWONDER'; color: white;"> </div>
+	<div id="scoreContainer" class="scoreOverlay">0</div>
+	<div id="startContainer" class="startOverlay">WASD TO MOVE</div>
+	<canvas id="canvas" width="1280" height="680"></canvas>
+	<script src="game.js"></script>
 </body>
 </html>
