--- a/index.html
+++ b/index.html
@@ -1,220 +1,120 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Home</title>
-	<meta content="width=device-width, initial-scale=1" name="viewport" />
-	<style type="text/css">
-		html {
-			box-sizing: border-box;
-			font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-		}
-		*, *::before, *::after {
-			box-sizing: inherit;
-			margin: 0;
-			padding: 0;
-		}
-		nav {
-			position: fixed;
-			left: 0px;
-			top: 0px;
-			width: 100%;
-			background-color: #000;
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			box-shadow: 0 2px 8px rgba(0, 0, 0, .25);
-		}
-		.nav-icon {
-			height: 48px;
-			margin: 8px;
-		}
-
-		.nav-links {
-			display: flex;
-			list-style: none;
-			align-items: center;
-			height: 100%;
-		}
-		.nav-links a {
-			text-decoration: none;
-			display: block;
-  			padding: 1em;
-  			color: white;
-		}
-		.active {
-			background-color: #212121;
-		}
-		.nav-links li {
-			height: 64px;
-			display: flex;
-			align-items: center;
-			transition: 0.3s ease-in-out;
-		}
-		.nav-links li:hover {
-			background-color: #212121;
-		}
-
-		.cards-container {
-			display: flex;
-			padding: 0px;
-			margin: 64px 0px 0px 0px;
-			flex-flow: row wrap;
-			justify-content: space-around;
-		}
-
-		.card {
-			background: #F5F5F5;
-			border-radius: 12px;
-			box-shadow: 0 4px 4px rgba(0, 0, 0, .15);
-			margin: 16px 16px 0px 16px;
-			padding: 16px;
-			width: 31vw;
-			cursor: pointer;
-			display: flex;
-			justify-content: space-between;
-			flex-flow: column wrap;
-		}
-
-		h1 {
-			font-size: 24px;
-			margin-bottom: 16px;
-		}
-
-		hr {
-			margin: 16px 0px 16px 0px;
-		}
-		
-		.tag {
-			padding: 8px;
-			font-weight: bold;
-			background-color: #212121;
-			border-radius: 12px;
-			color: #fff;
-			box-shadow: 0px 4px 4px rgba(0, 0, 0, .15);
-		}
-
-		.info-container {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-		}
-
-		.timestamp-container {
-			display: flex;
-			align-items: center;
-		}
-
-		.timestamp {
-			margin-left: 8px;
-		}
-
-
-
-		@media screen and (max-width: 800px) {
-			nav {
-				justify-content: center;
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+		<script src="https://kit.fontawesome.com/61ceb56f3e.js" crossorigin="anonymous"></script>
+		<title>Infocomm Portfolio</title>
+		<style>
+			.bg-black {
+				background-color: #000;
+			}
+			img.icon {
+				margin-right: 8px;
+			}
+			body {
+				padding-top: 100px;
+			}
+			.anchor {
+				position: relative;
+				top: -64px;
 			}
 			.card {
-				width: 100%;
+				cursor: pointer;
+				border: none !important;
 			}
-		}
-
-		@media screen and (max-width: 600px) {
-			nav {
-				position: initial;
-				flex-flow: column wrap;
-			}
-
-			.nav-links {
-				flex-flow: column wrap;
-				width: 100%;
-				align-items: initial;
-			}
-
-			.nav-links a {
-				text-align: center;
-				padding: 16px;
-    			border-top: 1px solid rgba(255, 255, 255, 0.3);
-			}
-
-			.nav-links li {
-				height: auto;
-				display: initial;
-			}
-
-			.nav-links li:last-of-type a {
-				border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-			}
-
-			.cards-container {
-				margin: 0;
-				flex-flow: column wrap;
-			}
-			.card {
-				width: auto;
-			}
-		}
-	</style>
-</head>
-<body>
-	<nav class="navbar">
-		<img class="nav-icon" src="img/icon.jpeg"/>
-		<ul class="nav-links">
-			<li class="active"><a href="#">web projects</a></li>
-			<li><a href="#">AI projects</a></li>
-			<li><a href="#">app projects</a></li>
-			<li><a href="#">school projects</a></li>
-		</ul>
-	</nav>
-	<div id="web-projects-container" class="cards-container">
-		<div class="card" onclick="location.href='proj1/'">
-			<h1>WebGL Polygon Generator</h1>
-			<p>First venture into manual WebGL, allows translation of a 2D object in 3 dimensions and redefining of its vertices to create any polygon.</p>
-			<hr>
-			<div class="info-container">
-				<div class="timestamp-container">
-					<img class="calendar-icon" src="img/calendar.svg">
-					<span class="timestamp">2018</span>
+		</style>
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-black shadow">
+			<div class="container">
+				<a class="navbar-brand" href="#">
+					<img src="assets/img/icon.jpeg" width="32" height="32" class="d-inline-block align-top icon">
+					alistair cheong
+				</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item mr-sm-2">
+							<a class="nav-link" href="#web">web</a>
+						</li>
+						<li class="nav-item mr-sm-2">
+							<a class="nav-link" href="#">AI/ML</a>
+						</li>
+						<li class="nav-item mr-sm-2">
+							<a class="nav-link" href="#">app</a>
+						</li>
+						<li class="nav-item mr-sm-2">
+							<a class="nav-link" href="#">3D/VR/AR/MR</a>
+						</li>
+						<li class="nav-item mr-sm-2">
+							<a class="nav-link" href="#">crypto</a>
+						</li>
+						<li class="nav-item mr-sm-2">
+							<a class="nav-link" href="#">CS</a>
+						</li>
+					</ul>
 				</div>
-				<span class="tag">webgl</span>
 			</div>
-		</div>
-		<div class="card" onclick="location.href='proj2/'">
-			<h1>Colour Gradient Generator</h1>
-			<p>Second venture into manual WebGL. Based on rgba colour input, WebGL will style the corners of square and blend the colours.</p>
-			<hr>
-			<div class="info-container">
-				<div class="timestamp-container">
-					<img class="calendar-icon" src="img/calendar.svg">
-					<span class="timestamp">2018</span>
+		</nav>
+
+		<div class="jumbotron jumbotron-fluid">
+			<div class="container">
+			  <h1 class="display-4">infocomm portfolio</h1>
+			  <p class="lead">a collection of all infocomm-related work done by me over the years. click on the relevant card to open the project.</p>
+			</div>
+		  </div>
+
+		<div class="container">
+
+			<h1><a class="anchor" id="web"></a>web projects</h1>
+			<br>
+			<div class="row">
+				<div class="col-md d-flex align-items-stretch">
+					<div class="card shadow-sm">
+						<div class="card-body" onclick="location.href='proj1/'">
+							<h5 class="card-title">polygon maker</h5>
+							<h6 class="card-subtitle mb-2 text-muted"><i class="far fa-calendar-alt"></i> sometime, 2017</h6>
+							<p class="card-text">first ever <code>webgl</code> project. allows you to do xyz translation and define 4 vertices of a polygon.</p>
+							<div class="d-flex justify-content-end">
+								<span class="badge badge-primary">webgl</span>
+							</div>
+						</div>
+					</div>
 				</div>
-				<span class="tag">webgl</span>
-			</div>
-		</div>
-		<div class="card" onclick="location.href='proj3/'">
-			<h1>3D Rotating Cube</h1>
-			<p>Third venture into manual WebGL. Renders a 3D cube that rotates.</p>
-			<hr>
-			<div class="info-container">
-				<div class="timestamp-container">
-					<img class="calendar-icon" src="img/calendar.svg">
-					<span class="timestamp">2018</span>
+				<div class="col-md d-flex align-items-stretch">
+					<div class="card shadow-sm">
+						<div class="card-body" onclick="location.href='proj2/'">
+							<h5 class="card-title">gradient generator</h5>
+							<h6 class="card-subtitle mb-2 text-muted"><i class="far fa-calendar-alt"></i> later, 2017</h6>
+							<p class="card-text">second <code>webgl</code> project. allows you to define <code>rgba()</code> values for 4 vertices of a square and blends the colours naturally. useful for creating colour wallpapers.</p>
+							<div class="d-flex justify-content-end">
+								<span class="badge badge-primary mr-2">webgl</span>
+								<span class="badge badge-primary">colour</span>
+							</div>
+						</div>
+					</div>
 				</div>
-				<span class="tag">webgl</span>
-			</div>
-		</div>
-		<div class="card" onclick="location.href='proj4/'">
-			<h1>snek</h1>
-			<p>Snake Game made using HTML5 Canvas</p>
-			<hr>
-			<div class="info-container">
-				<div class="timestamp-container">
-					<img class="calendar-icon" src="img/calendar.svg">
-					<span class="timestamp">2019</span>
+				<div class="col-md d-flex align-items-stretch">
+					<div class="card shadow-sm">
+						<div class="card-body" onclick="location.href='proj3/'">
+							<h5 class="card-title">spinning cube</h5>
+							<h6 class="card-subtitle mb-2 text-muted"><i class="far fa-calendar-alt"></i> later, 2017</h6>
+							<p class="card-text">third <code>webgl</code> project. renders a 3D rotating cube. </p>
+							<div class="d-flex justify-content-end">
+								<span class="badge badge-primary">webgl</span>
+							</div>
+						</div>
+					</div>
 				</div>
-				<span class="tag">canvas</span>
 			</div>
+			<div style="height: 5000px;"></div>
 		</div>
-	</div>
-</body>
+	</body>
 </html>
