--- a/p/1/1/1/index.html
+++ b/p/1/1/1/index.html
@@ -98,7 +98,7 @@
 			<td><input type="text" placeholder="xVal" id="input_vertexVal_6"><input type="text" placeholder="yVal" id="input_vertexVal_7"><button onclick="update(6, 7)">Update</button></td>
 		</tr>
 	</table>
-	<script src="../gl-matrix.js"></script>
+	<script src="../../../../assets/js/gl-matrix.js"></script>
 	<script src="main.js"></script>
 	<script src="slider.js"></script>
 	<script src="polyshape.js"></script>
