--- a/p/1/1/2/index.html
+++ b/p/1/1/2/index.html
@@ -92,7 +92,7 @@
 			<td><input value="0" type="text" placeholder="rVal" id="input_vertexVal_C"><input value="0" type="text" placeholder="gVal" id="input_vertexVal_D"><input value="255" type="text" placeholder="bVal" id="input_vertexVal_E"><input value="255" type="text" placeholder="aVal" id="input_vertexVal_F"><button onclick="update('C', 'D', 'E', 'F')">Update</button></td>
 		</tr>
 	</table>
-	<script src="../gl-matrix.js"></script>
+	<script src="../../../../assets/js/gl-matrix.js"></script>
 	<script src="main.js"></script>
 	<script src="colorify.js"></script>
 	<script type="text/javascript">
