--- a/p/1/1/3/index.html
+++ b/p/1/1/3/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<canvas id="glCanvas" width="1280" height="680"></canvas>
-	<script src="../gl-matrix.js"></script>
+	<script src="../../../../assets/js/gl-matrix.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
