--- a/index.html
+++ b/index.html
@@ -9,29 +9,7 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 		<script src="https://kit.fontawesome.com/61ceb56f3e.js" crossorigin="anonymous"></script>
 		<title>Infocomm Portfolio</title>
-		<style>
-			.bg-black {
-				background-color: #000;
-			}
-			img.icon {
-				margin-right: 8px;
-			}
-			body {
-				padding-top: 100px;
-			}
-			.anchor {
-				position: relative;
-				top: -64px;
-			}
-			.card {
-				cursor: pointer;
-				border: 1px solid #eee !important;
-				width: 100%;
-			}
-			.badge-holder {
-				padding: 0 1.25rem 1.25rem 0;
-			}
-		</style>
+		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-black shadow">
@@ -57,74 +35,7 @@
 			</div>
 		  </div>
 
-		<div id="projDiv" class="container">
-
-			<!-- <h1 class="mb-4"><a class="anchor" id="p1"></a>web projects</h1>
-			<h3 class="mb-2"><a class="anchor" id="p1.1"></a>webgl/3D/babylonjs</h3>
-
-			<div class="row">
-				<div class="col-md d-flex align-items-stretch mt-2">
-					<div class="card shadow-sm">
-						<div class="card-body" onclick="location.href='p/1/1/1'">
-							<h5 class="card-title">polygon maker</h5>
-							<h6 class="card-subtitle mb-2 text-muted"><i class="far fa-calendar-alt"></i> sometime, 2017</h6>
-							<p class="card-text">first ever <code>webgl</code> project. allows you to do xyz translation and define 4 vertices of a polygon.</p>
-						</div>
-						<div class="badge-holder d-flex justify-content-end align-self-end">
-							<span class="badge badge-primary">webgl</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md d-flex align-items-stretch mt-2">
-					<div class="card shadow-sm">
-						<div class="card-body" onclick="location.href='p/1/1/2'">
-							<h5 class="card-title">gradient generator</h5>
-							<h6 class="card-subtitle mb-2 text-muted"><i class="far fa-calendar-alt"></i> later, 2017</h6>
-							<p class="card-text">second <code>webgl</code> project. allows you to define <code>rgba()</code> values for 4 vertices of a square and blends the colours naturally. useful for creating colour wallpapers.</p>
-						</div>
-						<div class="badge-holder d-flex justify-content-end">
-							<span class="badge badge-primary mr-2">webgl</span>
-							<span class="badge badge-primary">colour</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md d-flex align-items-stretch mt-2">
-					<div class="card shadow-sm">
-						<div class="card-body" onclick="location.href='p/1/1/3'">
-							<h5 class="card-title">spinning cube</h5>
-							<h6 class="card-subtitle mb-2 text-muted"><i class="far fa-calendar-alt"></i> later, 2017</h6>
-							<p class="card-text">third <code>webgl</code> project. renders a 3D rotating cube. </p>
-						</div>
-						<div class="badge-holder d-flex justify-content-end">
-							<span class="badge badge-primary">webgl</span>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<h3 class="mt-4 mb-2"><a class="anchor" id="p1.2"></a>css experiments</h3>
-
-			<h3 class="mt-4 mb-2"><a class="anchor" id="p1.3"></a>standalone sites</h3>
-
-			<div class="row">
-				<div class="col-md d-flex align-items-stretch mt-2">
-					<div class="card shadow-sm">
-						<div class="card-body" onclick="location.href='p/1/3/1'">
-							<h5 class="card-title">snek</h5>
-							<h6 class="card-subtitle mb-2 text-muted"><i class="far fa-calendar-alt"></i> 2018</h6>
-							<p class="card-text">snake game created with HTML5 canvas</p>
-						</div>
-						<div class="badge-holder d-flex justify-content-end align-self-end">
-							<span class="badge badge-primary mr-2">html5</span>
-							<span class="badge badge-primary">canvas</span>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<h3 class="mt-4 mb-2"><a class="anchor" id="p1.4"></a>school projects</h3> -->
-
-		</div>
-		<script src="assets/js/projdata.js"></script>
+		<div id="projDiv" class="container"></div>
+		<script src="projdata.js"></script>
 	</body>
 </html>
